# unifi_control

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  publish.sh  pyproject.toml
unifi_control_cli/: __init__.py  cli.py  client.py  matcher.py  server.py
